--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,44 @@
     height: 50px;
     opacity:0;
 }
-.splash-screen-animation{
-    animation: fadeOut 4s 4s forwards;
-}
 
-@keyframes fadeOut {
-    0% { opacity: 1}
-    100% { opacity: 0}
+.animationContainer {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-color: black;
+    transition: 2s;
+}
+.animationClose {
+        margin-top: 0%;
+        left: 0;
+        width: 100%;
+        height: 20%;
+        background-color: white;
+        animation: rectangle-animation 8s linear forwards;
+    }
+.animationClose1 {
+        margin-top: 0%;
+        left: 0;
+        width: 100%;
+        height: 10%;
+        background-color: white;
+        animation: rectangle-animation 6s linear forwards;
+    }
+
+
+
+
+@keyframes rectangle-animation {
+    0% {
+    transform: scaleX(1);
+    }
+    50% {
+    transform: scaleX(0);
+    }
+    100% {
+    transform: scaleX(0);
+    background-color: #F6CF57;
+    }
 }
