--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ img {
     width: 250px;
 }
 p {
-    font-size: 25px;
+    font-size: 22px;
+    font-weight: bold;
     font-family: 'Kanit', sans-serif;
     margin-top:40px;
 }
@@ -524,6 +525,80 @@ width: 40px;
     color: white;
     transform: rotateY(180deg);
 } 
+/* Footer */
+footer{
+    background: #111;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    margin-top: 30px;
+    color: #fff;
+}
+.footer-content{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin-top:20px;
+}
+.footer-content h3{
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 4rem;
+}
+
+.footer-content p {
+    max-width: 400px;
+    margin: 4px auto;
+    line-height: 26px;
+    font-size: 14px;
+}
+.socials{
+    list-style: none;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin: 25px;
+}
+.socials li{
+    margin: 0 45px;
+}
+.socials a{
+    text-decoration: none;
+    color: #fff;
+}
+.socials a{
+    font-size: 1.1rem;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.2901960784);
+    transition: all 0.3s ease-in-out;
+}
+
+.socials a:hover{
+    box-shadow: 0 0 60px rgb(206, 205, 205);
+    color: rgb(206, 205, 205);
+}
+.footer-bottom{
+    background: #000;
+    width: 100vw;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 13px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+.footer-bottom span{
+    font-weight: 200px;
+    opacity: .4;
+
+}
+.socialImg{
+    width: 50px;
+    height: 50px;
+}
 /* KEYFRAMES ANIMATIONS */
 
 @keyframes animation-pokemons-opacity {
