--- a/css/form.css
+++ b/css/form.css
@@ -28,7 +28,7 @@ img {
 }
 
 .header-init {
-    background-color: #ccc;
+    background-color: #1c1c1c;
     position: absolute;
     width: 100%;
     height: 100px;
@@ -67,7 +67,7 @@ img {
 
 li {
     font-size: 2rem;
-    
+    color: #ececec;
 }
 
 .open-menu, .close-menu {
@@ -107,6 +107,30 @@ li {
     margin: 20px 0 12px 0;
 }
 
+.input-correct {
+    position: relative;
+    top: 10px;
+    color: red;
+    font-weight: 700;
+    opacity: 1;
+}
+
+.input-incorrect {
+    position: relative;
+    top: 10px;
+    color: red;
+    font-weight: 700;
+    opacity: 0;
+}
+
+.input-incorrect-numbers {
+    position: relative;
+    top: 10px;
+    color: red;
+    font-weight: 700;
+    opacity: 0;
+}
+
 form .users-details .input-box {
     margin-bottom: 20px;
     width: 50%;
@@ -142,6 +166,7 @@ form .users-details .input-box {
     border-radius: 5px;
     background-color: #910daf;
     transition: all 0.4s ease;
+    cursor: pointer;
 }
 
 .button-submit > button:hover {
